syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  int32 user_id = 1;
  repeated OrderItem items = 2; // Список товаров в заказе
}

message OrderItem {
  int32 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  bool success = 1;
  string message = 2;
  int32 order_id = 3;
}
